--- a/mainpage/mainpage.css
+++ b/mainpage/mainpage.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   background-image: url(../mainpage/바르샤.jpg);
   background-size: cover;
@@ -110,3 +111,27 @@ span {
   margin: 0px 200px 0px 200px;
 }
 /* footer끝 */
+/* 회전목마 시작 */
+
+/* slide show */
+.slideshow {
+  padding: 10px;
+  height: 465px;
+  min-width: 800px;
+  background-color: black;
+  position: relative;
+  overflow: hidden;
+}
+.slideshow_slides {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.slideshow_slides a {
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+/* 네비게이션바를 중앙에 배치한다. */
