--- a/mainpage/mainpage.css
+++ b/mainpage/mainpage.css
@@ -118,9 +118,14 @@ span {
   padding: 10px;
   height: 465px;
   min-width: 800px;
-  background-color: black;
+  background-image: url(../mainpage/바르샤.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
+  margin: 10px 220px 10px 220px;
+  border-radius: 20px;
+  border: 1px solid rgba(255, 0, 0, 0.548);
 }
 .slideshow_slides {
   position: absolute;
@@ -135,3 +140,38 @@ span {
   text-align: center;
 }
 /* 네비게이션바를 중앙에 배치한다. */
+.slideshow_nav a{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  font-size: 62px;
+  color: rgb(5, 5, 63);
+  transform: translateX(-50%);
+  transform: translateY(-50%);
+  opacity: 0.8;
+}
+div.slideshow_nav a.prev {
+  margin-left: -462px;
+}
+div.slideshow_nav a.next {
+  margin-left: 400px;
+}
+/* indicator */
+div.indicator {
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 20px;
+  text-align: center;
+}
+div.indicator a {
+  display: inline-block;
+  font-size: 24px;
+  color: rgb(5, 5, 63);
+  padding: 5px;
+  opacity: 0.8;
+}
+div.indicator a.active {
+  color: rgba(255, 0, 0, 0.548);
+}
+
